--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@
       </div>
 
       <div class="info__img">
-        <img src="photo1.png" alt="img">
+
+        <img class="img__info" src="photo1.png" alt="img">
+
         <div class="card">
+
           <div class="card__header">
-            <img src="photo2.png" alt="img">
+
+            <div class="img__section">
+              <img class="card__img" src="photo2.png" alt="img">
+            </div>
+
             <h2 class="card__title">Aliza Webber</h2>
             <p class="card__subtitle">Interior designer</p>
+
           </div>
+
           <div class="card__body">
             <p class="card__para">Designed in 2020 by Aliza Webber</p>
           </div>
+
         </div>
       </div>
 
