--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </button>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Collection</a></li>
           <li class="nav__item"><a href="#" class="nav__link">About</a></li>
           <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
